# gtest-sample-project

./: CMakeLists.txt  lib.cpp  lib.h  main.cpp
tests/: CMakeLists.txt  test1.cpp
